--- a/project2/project2/style.css
+++ b/project2/project2/style.css
@@ -32,10 +32,6 @@ hr {
     top: 85%;
 }
 
-/* .z-index{
-    z-index: -2;
-} */
-
 .img2{
     top: 79%;
     left: 82%;
@@ -55,6 +51,12 @@ hr {
     background: #102039;
 }
 
+/* ******** SEcdtion 2 ********* */
+
+.abs{
+    top: 57%;
+}
+
 @media screen and (max-width:767px) {
     .navbar {
         display: block;
@@ -70,5 +72,25 @@ hr {
         background: linear-gradient(to right, rgba(0, 0, 0, 0.54), rgba(0, 0, 0, 0.501)), url(./image/1.jpg);
         background-repeat: no-repeat;
         background-size: cover;
+    }
+
+    .shape{
+        display: none;
+    }
+    
+    .img1{
+        display: none;
+    }
+    
+    .img2{
+        display: none;
+    }
+    
+    .img3{
+        display: none;
+    }
+    
+    .img4{
+        display: none;
     }
 }
